--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body {
     font-family: Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9;
-    color: #333;
+    background-color: #f9f9f9e6;
+    color: #494848;
 }
 
 /* ヘッダー */
@@ -13,8 +13,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: white;
-    border-bottom: 2px solid black;
+    background-color: rgb(255, 242, 182);
+    border-bottom: 2px solid rgb(255, 243, 154);
 }
 
 .logo {
@@ -37,7 +37,7 @@ nav {
 }
 
 .nav-links li {
-    border: 2px solid black;
+    border: 2px solid rgb(255, 243, 154);
     padding: 5px 10px;
 }
 
@@ -55,11 +55,11 @@ nav {
 /* セクション */
 .section {
     padding: 40px 20px;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid rgb(255, 243, 154);
 }
 
 h2 {
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid rgb(255, 243, 154);
     display: inline-block;
     padding-bottom: 5px;
 }
@@ -72,8 +72,8 @@ h2 {
         position: absolute;
         top: 60px;
         right: 20px;
-        background: white;
-        border: 2px solid black;
+        background: rgb(255, 242, 182);
+        border: 2px solid rgb(255, 243, 154);
         padding: 10px;
     }
 
