--- a/style.css
+++ b/style.css
@@ -62,6 +62,47 @@ h2 {
     display: inline-block;
     padding-bottom: 5px;
 }
+.sns-box {
+    display: flex;
+    background-color: #999;
+    }
+    
+    .btn-sns {
+    display: grid;
+    place-content: center;
+    width: 3.5rem;
+    height: 3.5rem;
+    box-sizing: border-box;
+    border-radius: 0.2rem;
+    color: white;
+    font-size: 1.5rem;
+    text-align: center;
+    text-decoration: none;
+    }
+    
+    .btn-sns svg {
+    fill: #fff;
+    }
+    
+    .btn-sns:hover {
+    transition: 0.5s;
+    }
+    
+    .btn-twitter:hover {
+    background-color: #515252;
+    }
+    
+    
+    .btn-instagram:hover {
+    background-color: #ff00fb;
+    }
+
+    .btn-github:hover{
+        background-color:rgb(24, 24, 24)
+    }
+    .btn-linkedin:hover{
+        background-color:rgb(0, 56, 240)
+    }
 
 /* モバイル対応 */
 @media (max-width: 768px) {
