--- a/style.css
+++ b/style.css
@@ -47,12 +47,14 @@ nav {
 
 .timeline-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
 .timeline {
     width: 24%;
     height: 200px;
+    margin-bottom: 20px;
     overflow-y: scroll;
 }
 
