--- a/style.css
+++ b/style.css
@@ -145,8 +145,8 @@ body {
 }
 
 .blog-title {
-    background-color: #007bff;
-    color: white;
+    background-color: rgb(255, 242, 182);
+    color: #494848;
     padding: 10px;
     margin: 10px 0;
     cursor: pointer;
